--- a/.github/workflows/outer.yml
+++ b/.github/workflows/outer.yml
@@ -10,8 +10,8 @@ on:
 
 jobs:
   # Get the current step to only run the main job when the learner is on the same step.
-  run:
-    uses: ./.github/inner.yml
+  run-inner-workflow:
+    uses: ./.github/workflows/inner.yml
     with:
       variable: |
         ${{ matrix.values }}
